--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -50,9 +50,9 @@ mixin top-nav()
 								ul
 									li: a.scroll-link(href="#s-qwiz") 
 										.menu-icon
-											.menu-image-hover-wrapper
-												img(src="img/svg/safety-box.svg", alt="")
-												img(src="img/svg/safety-box-blue.svg", alt="")
+											span.menu-image-hover-wrapper
+												img.menu-image.menu-image-title-after(src='http://digitalconvertion.ru/wp-content/uploads/2020/02/safety-box.svg', alt='')
+												img.hovered-image.menu-image-title-after.icon(src='http://digitalconvertion.ru/wp-content/uploads/2020/02/safety-box-blue.svg', alt='', style='margin-left: -0px;')
 										| Подобрать сейф
 									li: a(href="#") Доставка и оплата
 									li: a(href="#") Контакты
