--- a/sourse/pug/blocks/s-catalog/item-prod.scss
+++ b/sourse/pug/blocks/s-catalog/item-prod.scss
@@ -5,6 +5,11 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: rem(360);
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+
+
 
 	@include media-breakpoint-up(xl) {
 
@@ -91,14 +96,20 @@
 		}
 	}
 
+	table {
+		margin-bottom: rem(25);
+	}
+
 	&__btn {
 		margin-left: auto;
 		margin-right: auto;
-		margin-top: rem(25);
+		// margin-top: rem(25);
+		margin-top: auto;
 		// @extend .btn-block;
 
 		@extend .btn-blue;
-		max-width: rem(239);
+
+		width: rem(239);
 		@include mt;
 		margin-bottom: rem(30);
 
