modal + tabs at 19.03

--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -13,7 +13,7 @@ mixin footer()
 							li: a(href="#") Контакты
 			.row
 				.col-sm
-					+e.btn(href="#")
+					+e.btn.link-modal(href="#modal-call-other")
 						+icon("safety-box")
 						| Подобрать сейф
 				.col-sm-auto.order-sm-0.order-last
