--- a/sourse/pug/pages/09-prod.pug
+++ b/sourse/pug/pages/09-prod.pug
@@ -7,7 +7,7 @@ include ../blocks/s-category/_s-category.pug
 include ../blocks/s-catalog/_s-catalog.pug
 include ../blocks/s-pdf/_s-pdf.pug
 include ../blocks/s-steps/_s-steps.pug
-include ../blocks/s-video/_s-video.pug
+include ../blocks/s-info/_s-info.pug
 include ../blocks/s-shipping/_s-shipping.pug
 include ../blocks/s-shipping-and-payment/_s-shipping-and-payment.pug
 include ../blocks/s-filter/_s-filter.pug
@@ -33,5 +33,5 @@ block pagecontent
 	+s-you-watched
 	+s-other-products()
 	//- +s-form-08()
-	//- +s-video
+	+s-info
 	+footer()
