--- a/sourse/pug/blocks/s-info/_s-info.pug
+++ b/sourse/pug/blocks/s-info/_s-info.pug
@@ -11,5 +11,6 @@ mixin s-info()
 						+e.title Сейф Aiko T17 EL
 						p AIKO - очень популярная марка российского рынка домашних (мебельных) и&nbsp;офисных сейфов и&nbsp;шкафов которые также могут использоваться в&nbsp;качестве недорогих сейфов для хранения оружия, от&nbsp;крупнейшего Российского производителя. <br>Сейфы комплектуются замками, а&nbsp;также внутренними деталями и&nbsp;аксессуарами: полками, ложементами, трейзерами и&nbsp;тп.<br>Большое разнообразие сейфов и&nbsp;шкафов как по&nbsp;назначению так и&nbsp;по&nbsp;цене, оптом и&nbsp;в&nbsp;розницу с&nbsp;доставкой
 					+e.content
-						<iframe height="315" src="https://www.youtube.com/embed/9XaS93WMRQQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						+e.frame-wrapper
+							<iframe src="https://www.youtube.com/embed/9XaS93WMRQQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	// end s-info
